# FastAPI-MVC

./: .gitignore  Evolver使用说明.md  README.md  errror.md  fastapi_entrepreneur_config_design.md  fastapi_event_dirver_design.md  fastapi_exception_handling_design.md  fastapi_routing_design.md  multi_database_management.md  pyproject.toml  图像搜索算法工程师面试问答文档.md  智能体平台架构分析文档.md  智能体平台架构图.md  智能体平台架构图（中转站版）.md  目录规划设计.md  算法工程师复习资料.md
0.基础概念/: 损失函数.md  提示词.md  模型架构提示词.md  激活函数.md
1.模型架构规范/: 1.1 深度学习模型架构分析 v1.md
1.深度学习/: 0.深度学习笔记目录规划方案.md
2.AI 工程/: 全栈框架家族与技术选型图谱.md
2.Transformer/: 1.2 模型架构图详细版.md
2.智能体/: RAG 全链路优化与面试全攻略.md
7.提示词与AI协作/: note.md
7.模板/: notes.md  新增笔记文档提示词.md  模型架构分析通用提示词_v2.md  知识体系建设与文档工作流.md  程序员日常提示词速查手册.md  项目交接.md
9.资源/: AI 在线资源导航.md  GitHub开源项目收纳清单.md  README.md
Resume/: notes.md  大模型网关（LLMGateway）.md  我的简历.md  模拟面试_资深AI架构师.md  简历1.md  简历优化版.md  算法工程师复习资料.md  资深 AI 架构师（Agent & Infra） 35-60K·15薪.md
TimesNet/: 1.1 模型架构图基础版.md  1.2 模型架构图详细版.md  1.模型架构图.md  10. 总结与未来展望.md  5. 训练与调参实践.md  6. 代码实现与部署.md
other/: cnn_complete.md  cnn_complete_optimized.md
scripts/: check-evolver-project-memory.sh  check-evolver-shared-memory.sh  codex-with-evolver-project-memory.sh  codex-with-evolver.sh
transformer/: 1.1 模型架构图基础版.md  1.2 模型架构图详细版.md  1.模型架构图.md  2. 核心考点与架构总结.md  4. 组件深度解析.md  5. 训练与调参实践.md  6. 代码实现与部署.md  7. 应用场景与案例分析.md  9. 总结与未来展望.md
yolo/: 双休图像搜索算法工程师.md  模型比较.md
前端开发/: 前端术语知识体系.md
提示词/: Dify架构分析文档.md  新增笔记文档提示词.md  模型架构分析通用提示词_v2.md  笔记提示词.md  项目架构分析通用提示词_v2.md  项目架构基础版和详细版v2.md
智能体平台/: 妙码课件.txt  提示词.md  智能体平台完整开发规划方案.md  (+7 more)
(+358 files in other folders)
