[project]
name = "notes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.6.1",
    "scikit-learn>=1.7.2",
    "seqeval>=1.2.2",
    "torch>=2.10.0",
    "torchcrf>=1.1.0",
    "tqdm>=4.67.3",
    "transformers>=5.2.0",
]
[tool.uv]
index-url = "https://mirrors.aliyun.com/pypi/simple/" 
