[project]
name = "fastapi-mvc-tools"
version = "0.1.0"
description = "Project-local uv environment for Codex utilities and image generation workflows."
requires-python = ">=3.9"
dependencies = []

[dependency-groups]
imagegen = [
    "openai",
    "pillow",
]

[tool.uv]
index-strategy = "first-index"

[[tool.uv.index]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
